--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@ body {
     margin: 0;
     padding: 20px;
 }
-
+.clicks {
+     text-align: right;
 h1 {
     text-align: center;
     color: #379cf4;
