--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 .inline-elements {
     display: flex;
-    align-items: center;
+    align-items: right;
 }
 h1 {
     text-align: center;
