--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     margin: 0;
     padding: 20px;
 }
-.thoeswhoknow {
+.inline-elements {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -199,4 +199,8 @@ body.dark-mode {
 
 #closeBtn {
     margin-top: 20px;
+}
+
+.clicks {
+    text-align: right;
 }
